<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Player List-->
    <ListView
        android:id="@+id/mPlayerListListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></ListView>

    <!--Start Fight-->
    <Button
        android:id="@+id/mStartFightButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:layout_margin="20dp"
        android:text="@string/startFight"
        android:visibility="visible"/>

    <!--Fight Commands-->
    <LinearLayout
        android:id="@+id/mFightCommandsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:padding="20dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/round"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            style="@style/ButtonStyle"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/nextRound"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            style="@style/ButtonStyle"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="@string/stopFight"/>
    </LinearLayout>
</LinearLayout>